# HAL-Recovery-Runtime

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PUBLIC_POC_MANIFEST.json  README.md  SECURITY.md  pyproject.toml
docs/: ARTIFACT_CONTRACT.md  CLI_REFERENCE.md  LIMITATIONS.md  PUBLIC_POC_WORKFLOW.md  THREAT_MODEL.md
samples/: degraded_missing_routes_profile.json  failure_scenario_action_timeout.json  failure_scenario_action_timeout_after_first_action.json  failure_scenario_adapter_unavailable.json  failure_scenario_adapter_unavailable_after_first_action.json  failure_scenario_forced_safety_boundary_failure.json  failure_scenario_none.json  failure_scenario_partial_plan_failure.json  failure_scenario_route_unavailable.json  failure_scenario_route_unavailable_after_first_action.json  failure_scenario_unsafe_hardware_enabled.json  failure_scenario_unsupported_mode.json  pipeline_profile_two_actions.json  policy_config_conservative_default.json  policy_config_degraded_requires_review.json  policy_config_rollback_if_prior_actions.json  policy_config_safe_stop_first.json  policy_config_unsafe_allow_real_execution.json  policy_config_unsafe_hardware_control.json  policy_config_unsafe_retry.json  policy_config_wrong_claim_boundary.json  recovery_profile.json  review_decision_approved.json  review_decision_empty_reviewer.json  review_decision_invalid_json.json  review_decision_missing_ack.json  review_decision_missing_timestamp.json  review_decision_unapproved.json  review_decision_unsafe_certification.json  review_decision_unsafe_hardware_control.json  (+17 more)
(+246 files in other folders)
